--- a/dillo/templates/dillo/posts_base.pug
+++ b/dillo/templates/dillo/posts_base.pug
@@ -18,6 +18,15 @@
 
   | {% if '/explore/' in request.path_info %}
   .nav-tabbar
+    | {% if request.user.is_authenticated %}
+    a.btn-tag(
+      class="{% if '/bookmarks' in request.path_info %}active{% endif %}",
+      href="{% url 'bookmarks' %}",
+      title="{% trans 'Your Saved Bookmarks' %}")
+      span
+        i.i-bookmark
+        span {% trans 'My Bookmarks' %}
+    | {% endif %}
     | {% if trending_tags %}
     .post-stream-tags
       ul
