--- a/dillo/templates/dillo/components/_notifications.pug
+++ b/dillo/templates/dillo/components/_notifications.pug
@@ -4,5 +4,5 @@
 	.notifications-header
 		span {% trans 'Activity' %}
 	.notifications-content
-		.p-5.text-center
-			.spinner-border.text-muted
+		.notifications-empty
+			.bouncing-ball
