--- a/dillo/templates/dillo/profile_details.pug
+++ b/dillo/templates/dillo/profile_details.pug
@@ -22,7 +22,7 @@ style.
 
 | {% if user.profile.next_events_attending %}
 .profile-events
-  | {% include 'animato/components/_feed_events.pug' with events=user.profile.next_events_attending events_title='Going To' %}
+  | {% include 'animato/components/_feed_events.pug' with events=user.profile.next_events_attending title='Going to the following events' %}
 | {% endif %}
 
 | {{ block.super }}
