UI: Update theme color

--- a/dillo/templates/dillo/components/_head_tags.pug
+++ b/dillo/templates/dillo/components/_head_tags.pug
@@ -1,7 +1,7 @@
 | {% load static %}
 meta(charset='utf-8')
 meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
-meta(name="theme-color", content="#46dcc3")
+meta(name="theme-color", content="#0047fa")
 
 - var site_name = 'anima.to';
 - var site_keywords = 'animation,animate,2d,3d,2danimation,cg,motiongraphics,blender,greasepencil,toonboom,tvpaint,flash';
