--- a/dillo/templates/dillo/events/event_list.pug
+++ b/dillo/templates/dillo/events/event_list.pug
@@ -2,9 +2,7 @@
 | {% load i18n %}
 | {% load thumbnail %}
 
-| {% block page_title %}
-| {% trans 'Events' %} {% trans 'on' %}
-| {% endblock page_title %}
+| {% block page_title %}{% trans 'Animation Events' %} {% trans 'on' %} {% endblock page_title %}
 
 | {% block stream %}
 | {% if events %}
