--- a/dillo/templates/dillo/reels/reel_list.pug
+++ b/dillo/templates/dillo/reels/reel_list.pug
@@ -2,6 +2,8 @@
 | {% load i18n %}
 | {% load thumbnail %}
 
+| {% block page_title %}{% trans 'Animation Reels' %} {% trans 'on' %} {% endblock page_title %}
+
 | {% block content %}
 .container-fluid
   .nav-tabbar
