--- a/dillo/templates/dillo/reels/reel_list.pug
+++ b/dillo/templates/dillo/reels/reel_list.pug
@@ -10,30 +10,24 @@
     | {% block stream_nav_items %}
     | {% include 'dillo/reels/_navigation_reel.pug' %}
     | {% endblock stream_nav_items %}
+
+    //- Notice for users without a reel.
+    | {% if not user.profile.reel or not request.user.is_authenticated %}
+    .theater-header
+      | {% url 'profile_edit' as btn_reels_cta %}
+      | {% include 'dillo/components/_button_generic.pug' with url=btn_reels_cta label="Add Animation Reel" class="btn-primary-strong" %}
+
+      span #[strong #[i.i-star] Your reel could be here!]
+
+      | {% if not request.user.is_authenticated %}
+      span Create a free account to add your animation reel.
+      | {% else %}
+      | {% url 'profile_edit' as profile_edit_url %}
+      span Fill in the #[a(href="{{ profile_edit_url }}") reel section] on your profile.
+      | {% endif %}
+    | {% endif %}
+
     | {% include 'dillo/components/_pagination.pug' with page_obj=page_obj label="reel" %}
-
-  //- Notice for users without a reel.
-  | {% if not user.profile.reel or not request.user.is_authenticated %}
-  .card.theater-header
-    .card-body
-      .row
-        .col-md-9
-          | #[strong #[i.i-star] Your reel could be here!]
-          | {% if not request.user.is_authenticated %}
-          | {% url 'account_signup' as signup_url %}
-          | {% url 'account_signup' as btn_reels_cta %}
-          | #[a(href="{{ signup_url }}") Create a free account] to add your animation reel.
-          | {% trans 'Create Your Profile' as btn_profile_label %}
-          | {% else %}
-          | {% url 'profile_edit' as profile_edit_url %}
-          | {% url 'profile_edit' as btn_reels_cta %}
-          | Fill in the #[a(href="{{ profile_edit_url }}") reel section] on your profile.
-          | {% trans 'Add Reel to Profile' as btn_profile_label %}
-          | {% endif %}
-
-        .col-md-3
-          | {% include 'dillo/components/_button_generic.pug' with url=btn_reels_cta label=btn_profile_label class="btn-primary btn-wide" %}
-  | {% endif %}
 
   | {% if object_list %}
   .cards-grid
