Flat Pages: Larger font

--- a/dillo/templates/flatpages/default.pug
+++ b/dillo/templates/flatpages/default.pug
@@ -5,7 +5,8 @@
 
 | {% block stream %}
 .container
-  | {{ flatpage.content }}
+  .item-detail-body
+    | {{ flatpage.content }}
 | {% endblock stream %}
 
 | {% block sidebar %}
