--- a/dillo/templates/dillo/events/event_list.pug
+++ b/dillo/templates/dillo/events/event_list.pug
@@ -6,43 +6,45 @@
 
 | {% block stream %}
 | {% if events %}
-.row.cards-row-2
+.cards-grid.e-events-large
   | {% for event in events %}
-  .col
-    .card.e-event-large
-      | {% thumbnail event.image "1280" crop="center" as im %}
-      a.card-thumbnail(href="{% url 'event_detail' slug=event.slug %}", title="{{ event.name }}")
-        img(
-          src="{{ im.url }}",
-          width="{{ im.width }}",
-          height="{{ im.height }}",
-          alt="{{ event.name }}")
-      | {% endthumbnail %}
+  .card-borderless
+    | {% thumbnail event.image "1280x720" crop="center" as im %}
+    a.card-thumbnail(href="{% url 'event_detail' slug=event.slug %}", title="{{ event.name }}")
+      img(
+        src="{{ im.url }}",
+        width="{{ im.width }}",
+        height="{{ im.height }}",
+        alt="{{ event.name }}")
+    | {% endthumbnail %}
 
-      .card-body
-        .e-event
-          a.e-event-date(href="{% url 'event_detail' slug=event.slug %}")
-            .month {{ event.starts_at | date:"M" | upper }}
+    .card-body
+      .e-event
+        a.e-event-date(href="{% url 'event_detail' slug=event.slug %}")
+          figure
+            span.month {{ event.starts_at | date:"M" | upper }}
             span.day {{ event.starts_at | date:"d" }}
 
-          .e-event-info
-            a.e-event-title(href="{% url 'event_detail' slug=event.slug %}")
-              | {{ event.name }}
+        .e-event-info
+          a.e-event-title(href="{% url 'event_detail' slug=event.slug %}")
+            | {{ event.name }}
 
-            .location
-              | {% if event.is_online %}
-              | {% include 'dillo/components/_badge_online.pug' %}
-              | {% else %}
-              i.i-map-pin
-              | {{ event.location }}
-              | {% endif %}
-
-            | {% if event.attendees.all %}
-            .going
-              | {% if event.attendees.all.count == 1 %}{{ event.attendees.all | first }} is going{% endif %}
-              | {% if event.attendees.all.count == 2 %}{{ event.attendees.all | join:" and " }} are going{% endif %}
-              | {% if event.attendees.all.count > 2 and event.attendees.all.count < 8 %}{{ event.attendees.all | join:", " }} are going{% endif %}
+          | {% if event.location or event.is_online %}
+          .location
+            | {% if event.is_online %}
+            | {% include 'dillo/components/_badge_online.pug' %}
+            | {% elif event.location %}
+            i.i-map-pin
+            | {{ event.location }}
             | {% endif %}
+          | {% endif %}
+
+          | {% if event.attendees.all %}
+          .going
+            | {% if event.attendees.all.count == 1 %}{{ event.attendees.all | first }} is going{% endif %}
+            | {% if event.attendees.all.count == 2 %}{{ event.attendees.all | join:" and " }} are going{% endif %}
+            | {% if event.attendees.all.count > 2 and event.attendees.all.count < 8 %}{{ event.attendees.all | join:", " }} are going{% endif %}
+          | {% endif %}
   | {% endfor %}
 
 | {% else %}
