--- a/dillo/templates/dillo/components/_post_meta.pug
+++ b/dillo/templates/dillo/components/_post_meta.pug
@@ -3,7 +3,7 @@
 
 .post-meta
 	ul
-		li.post-meta-link(title="{{ post.published_at | date:'DATETIME_FORMAT' }}")
+		li.post-meta-item(title="{{ post.published_at | date:'DATETIME_FORMAT' }}")
 			| {{ post.published_at | timesince | shorten_timesince }} {% trans 'ago' %}
 
 		| {% if post.comments.count %}
