Directory: Tweak choices fields display

--- a/dillo/templates/dillo/directory/user_directory.pug
+++ b/dillo/templates/dillo/directory/user_directory.pug
@@ -135,9 +135,8 @@ script.
 
   for (let choiceElement of choiceElements) {
     let choice = new Choices(choiceElement, {
-      placeholder: true,
-      placeholderValue: 'test',
-      searchPlaceholderValue: 'test search'
+      placeholderValue: `Select ${choiceElement.name}`,
+      removeItemButton: true
     });
 
     choices.push(choice);
