--- a/dillo/templates/dillo/directory/user_directory.pug
+++ b/dillo/templates/dillo/directory/user_directory.pug
@@ -18,21 +18,26 @@ script(src='//unpkg.com/globe.gl')
     .dir-users-header
       .dir-users-header-filters
         .form-field-container
-          select#tag.js-choice(name="tag", multiple)
+          select#tag.js-choice.js-choice-multi(name="tag", multiple)
             | {% for tag in search_facets.tags %}
             option(selected=tag.is_selected value="{{ tag.value }}") {{ tag.label }}
             | {% endfor %}
 
         .form-field-container
-          select#badge.js-choice(name="badge", multiple)
+          select#badge.js-choice.js-choice-multi(name="badge", multiple)
             | {% for badge in search_facets.badges %}
             option(selected=badge.is_selected value="{{ badge.value }}") {{ badge.label }}
             | {% endfor %}
 
+        .form-field-container
+          select#sort(name="sort")
+            option(selected=(sort == '-likes_count') value="-likes_count") Likes Count
+            option(selected=(sort == '-posts_count') value="-posts_count") Posts Count
+
         div
           .btn(
-            onclick="toggleGlobeVisibility()",
-            title="Toggle Globe")
+            title="Toggle Globe"
+            onclick="toggleGlobeVisibility()")
             span
               i.i-globe
 
@@ -90,8 +95,14 @@ script.
     for (let choice of choices) {
       let key = choice.passedElement.element.id;
       urlParams.delete(key);
-      for (let v of choice.getValue(true)) {
-        urlParams.append(key, v);
+      if (choice._isSelectMultipleElement) {
+        for (let v of choice.getValue(true)) {
+          urlParams.append(key, v);
+        }
+      } else {
+        // Passing the whole value of the select, if single select.
+        // Otherwise each char is iterated over
+        urlParams.append(key, choice.getValue(true));
       }
     }
   }
@@ -133,7 +144,7 @@ script.
   const urlParams = new URLSearchParams();
   let choices = [];
 
-  const choiceElements = document.getElementsByClassName('js-choice');
+  const choiceElements = document.getElementsByClassName('js-choice-multi');
 
   for (let choiceElement of choiceElements) {
     let choice = new Choices(choiceElement, {
@@ -153,6 +164,22 @@ script.
       false,
     );
   }
+
+  let choiceSingleElement = document.getElementById('sort');
+  let choiceSingle = new Choices(choiceSingleElement, {
+    searchEnabled: false
+  });
+  choices.push(choiceSingle);
+  choiceSingleElement.addEventListener(
+    'change',
+    function (event) {
+      updateUrlParams(choices, urlParams);
+      url.search = urlParams.toString();
+      fetchUsers(url);
+      fetchUsersGlobe(url, globe)
+    },
+    false,
+  );
 
   // On page load fetch all users
   fetchUsers(url);
